--- a/App/frontHouse/app/src/main/res/layout/activity_main.xml
+++ b/App/frontHouse/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,13 @@
         app:layout_constraintVertical_bias="0.092"
         tools:layout_editor_absoluteX="148dp" />
 
+    <Button
+        android:id="@+id/send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="sending"
+        android:text="Send"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="118dp" />
+
 </android.support.constraint.ConstraintLayout>
