--- a/App/frontHouse/app/src/main/res/layout/cell.xml
+++ b/App/frontHouse/app/src/main/res/layout/cell.xml
@@ -29,6 +29,7 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="16dp"
         android:layout_marginLeft="25dp"
+        app:layout_constraintTop_toBottomOf="@id/day"
         app:layout_constraintLeft_toLeftOf="@id/cell_layout"
         />
 
