--- a/App/frontHouse/app/src/main/res/layout/shift_view.xml
+++ b/App/frontHouse/app/src/main/res/layout/shift_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ShiftVeiw">
+    tools:context=".ShiftView">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
