--- a/App/frontHouse/app/src/main/res/values/styles.xml
+++ b/App/frontHouse/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-</resources>
+    <style name="AppTheme.NoActionBar">
+
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+    </style>
+
+
+
+
+    </resources>
